# GPGPU_ISIMA_2022-2023

./: .gitignore  LICENSE
Lessons/: 01_lesson.tex
TPs/Project/: CMakeLists.txt
TPs/Project/doc/: Project.tex  Texture.tex
TPs/Project/include/: gpgpu.h
TPs/Project/include/glad/: glad.h
TPs/Project/src/: glad.c  main.cpp
TPs/Project/src/gpgpu/: gpgpu.cu
TPs/TP01/: CMakeLists.txt
TPs/TP01/doc/: TP01.tex
TPs/TP01/src/: main.cpp
TPs/TP02/: CMakeLists.txt
TPs/TP02/doc/: TP02.tex
TPs/TP02/src/: main.cpp
TPs/TP02/src/gpgpu/: gpgpu.cu
